rns-lang/tests/snapshots/lexer-directives-semicolon_right_after_dot.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
    .;comment after semicolon
.end
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/directives/semicolon_right_after_dot.ja:2:5 ]
   │
 2 │     .;comment after semicolon
   │     ────┬────  
   │         ╰────── Unknown directive '.;comment'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .limit
───╯
